add information rncp master2

--- a/master2/BIGDATA/connexion_api_youtube_lou.ipynb
+++ b/master2/BIGDATA/connexion_api_youtube_lou.ipynb
@@ -31,7 +31,7 @@
     "import json\n",
     "\n",
     "# Remplace par ta clé API\n",
-    "API_KEY = 'AIzaSyD1cOndP2Z_XbbbO8KiNfi67YnF1VdSJyY'\n",
+    "API_KEY = 'XXXXXXXXXXXX'\n",
     "\n",
     "# Définir les paramètres de recherche\n",
     "params = {\n",
