--- a/master2/BIGDATA/2.0_connexion_api_youtube.ipynb
+++ b/master2/BIGDATA/2.0_connexion_api_youtube.ipynb
@@ -50,7 +50,7 @@
     "import json\n",
     "\n",
     "# Remplace par ta clé API\n",
-    "API_KEY = 'AIzaSyD1cOndP2Z_XbbbO8KiNfi67YnF1VdSJyY'\n",
+    "API_KEY = 'XXXXXXXXXX'\n",
     "\n",
     "# Définir les paramètres de recherche\n",
     "params = {\n",
