add TD5 on unit tests

--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9e1c018a",
+   "execution_count": 1,
+   "id": "100567d4",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Crée un docker Mongodb sur le terminal (a faire qu'une fois):\n",
-    "# docker run -d --name mongodb -p 27017:27017 mongo:latest\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "640c6847",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Récupération des données et écriture dans le fichier CSV...\n",
+      "Importation des données dans MongoDB...\n",
+      "50 vidéos ont été insérées dans la base MongoDB.\n"
+     ]
+    }
+   ],
    "source": [
     "from googleapiclient.discovery import build\n",
     "from googleapiclient.errors import HttpError\n",
@@ -25,17 +23,10 @@
     "import csv\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "# API_KEY = 'XXXXXXXXXXXXXX'\n",
-    "API_KEY = 'AIzaSyAoz5fAtLoF3jZbOSFljrIb2IFnC8MnK0Y'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "75975c54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "API_KEY = 'AIzaSyAoz5fAtLoF3jZbOSFljrIb2IFnC8MnK0Y'  # Remplacez par votre clé API YouTube\n",
+    "\n",
+    "\n",
+    "\n",
     "def get_technology_video_ids(tags, max_results=50):\n",
     "    \"\"\"\n",
     "    Récupère les identifiants de vidéos YouTube correspondant à une liste de tags et une catégorie.\n",
@@ -104,6 +95,7 @@
     "        print(f\"Erreur pour l'ID vidéo {video_id}: {response.status_code}\")\n",
     "        return None\n",
     "\n",
+    "\n",
     "def tags_to_csv():\n",
     "    \"\"\"\n",
     "    Récupère les vidéos correspondant aux tags définis, puis enregistre les métadonnées dans un fichier CSV.\n",
@@ -116,7 +108,7 @@
     "    video_ids = get_technology_video_ids(tags, max_results=50)\n",
     "\n",
     "    # Écrire les informations des vidéos dans un fichier CSV\n",
-    "    with open('Data_video.csv', mode='w', newline='', encoding='utf-8') as file:\n",
+    "    with open('video_info.csv', mode='w', newline='', encoding='utf-8') as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerow(['video_id', 'title', 'publishedAt', 'channelId', 'description', 'view_count', \n",
     "                         'like_count', 'favorite_count', 'comment_count', 'tags', 'defaultLanguage'])\n",
@@ -136,26 +128,19 @@
     "                    video_info['statistics'].get('commentCount', 'N/A'),\n",
     "                    \", \".join(video_info['snippet'].get('tags', [])),\n",
     "                    video_info['snippet'].get('defaultLanguage', 'N/A')\n",
-    "                ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b7f2aae2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def csv_to_mongo_compass(path, mongo_url):\n",
+    "                ])\n",
+    "\n",
+    "\n",
+    "def csv_to_mongo_compass():\n",
     "    \"\"\"\n",
     "    Lit les données depuis le fichier CSV généré et les insère dans une base de données MongoDB locale.\n",
     "    \"\"\"\n",
-    "    client = MongoClient(mongo_url)\n",
+    "    client = MongoClient(\"mongodb+srv://gaetan:05021995fR@cluster0.wxcxg.mongodb.net/\")\n",
     "    db = client['youtube_data']\n",
     "    collection = db['videos']\n",
     "\n",
     "    # Charger les données depuis le fichier CSV\n",
-    "    with open(path, mode='r', encoding='utf-8') as file:\n",
+    "    with open('video_info.csv', mode='r', encoding='utf-8') as file:\n",
     "        reader = csv.DictReader(file)\n",
     "        video_data = [row for row in reader]\n",
     "\n",
@@ -164,67 +149,23 @@
     "        collection.insert_many(video_data)\n",
     "        print(f\"{len(video_data)} vidéos ont été insérées dans la base MongoDB.\")\n",
     "    else:\n",
-    "        print(\"Aucune donnée trouvée dans le fichier CSV.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a8fa7434",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Récupération des données et écriture dans le fichier CSV...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # Étape 1 : Récupération des données et création du fichier CSV\n",
-    "print(\"Récupération des données et écriture dans le fichier CSV...\")\n",
-    "tags_to_csv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cecbc834",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importation des données dans MongoDB...\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Data_video.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Étape 2 : Importation des données dans MongoDB\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImportation des données dans MongoDB...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m csv_to_mongo_compass(path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData_video.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, mongo_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmongodb+srv://gaetan:05021995fR@cluster0.wxcxg.mongodb.net/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[4], line 10\u001b[0m, in \u001b[0;36mcsv_to_mongo_compass\u001b[1;34m(path, mongo_url)\u001b[0m\n\u001b[0;32m      7\u001b[0m collection \u001b[38;5;241m=\u001b[39m db[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvideos\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Charger les données depuis le fichier CSV\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     11\u001b[0m     reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictReader(file)\n\u001b[0;32m     12\u001b[0m     video_data \u001b[38;5;241m=\u001b[39m [row \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader]\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Data_video.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "# Étape 2 : Importation des données dans MongoDB\n",
-    "print(\"Importation des données dans MongoDB...\")\n",
-    "csv_to_mongo_compass(path = 'Data_video.csv', mongo_url = \"mongodb+srv://gaetan:05021995fR@cluster0.wxcxg.mongodb.net/\")\n",
-    "# \"mongodb://localhost:27017/\""
+    "        print(\"Aucune donnée trouvée dans le fichier CSV.\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Étape 1 : Récupération des données et création du fichier CSV\n",
+    "    print(\"Récupération des données et écriture dans le fichier CSV...\")\n",
+    "    tags_to_csv()\n",
+    "\n",
+    "    # Étape 2 : Importation des données dans MongoDB\n",
+    "    print(\"Importation des données dans MongoDB...\")\n",
+    "    csv_to_mongo_compass()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1852a03",
+   "id": "92fa36fa",
    "metadata": {},
    "outputs": [],
    "source": []
