modify notebook mongodb

--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB.ipynb
@@ -25,8 +25,7 @@
     "import csv\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "# API_KEY = 'XXXXXXXXXXXXXX'\n",
-    "API_KEY = 'AIzaSyAoz5fAtLoF3jZbOSFljrIb2IFnC8MnK0Y'"
+    "API_KEY = 'XXXXXXXXXXXXXX'"
    ]
   },
   {
