--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
@@ -23,7 +23,7 @@
     "import csv\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "API_KEY = 'AIzaSyAoz5fAtLoF3jZbOSFljrIb2IFnC8MnK0Y'  # Remplacez par votre clé API YouTube\n",
+    "API_KEY = 'XXXXXXXXXXXXXX'\n",
     "\n",
     "\n",
     "\n",
