update etl opendata

--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "# Étape 2 : Importation des données dans MongoDB\n",
     "print(\"Importation des données dans MongoDB...\")\n",
-    "csv_to_mongo_compass(path = 'Data_video.csv', mongo_url = \"mongodb+srv://gaetan:05021995fR@cluster0.wxcxg.mongodb.net/\")\n",
+    "csv_to_mongo_compass(path = 'Data_video.csv', mongo_url = \"mongodb+srv://gaetan:05XXXXXXXXfR@cluster0.wxcxg.mongodb.net/\")\n",
     "# \"mongodb://localhost:27017/\""
    ]
   },
