--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
@@ -135,7 +135,7 @@
     "    \"\"\"\n",
     "    Lit les données depuis le fichier CSV généré et les insère dans une base de données MongoDB locale.\n",
     "    \"\"\"\n",
-    "    client = MongoClient(\"mongodb+srv://gaetan:05021995fR@cluster0.wxcxg.mongodb.net/\")\n",
+    "    client = MongoClient(\"mongodb+srv://gaetan:05XXXXXXXXXXXfR@cluster0.wxcxg.mongodb.net/\")\n",
     "    db = client['youtube_data']\n",
     "    collection = db['videos']\n",
     "\n",
