add etoro_scrapper and trade_republic_testing on ydays

--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "100567d4",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
     "import csv\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "API_KEY = 'XXXXXXXXXXXXXXXXXXXXXX'\n",
+    "API_KEY = 'XXXXXXXXXXXXXXXXXXX'\n",
     "\n",
     "\n",
     "\n",
@@ -135,7 +135,7 @@
     "    \"\"\"\n",
     "    Lit les données depuis le fichier CSV généré et les insère dans une base de données MongoDB locale.\n",
     "    \"\"\"\n",
-    "    client = MongoClient(\"mongodb+srv://gaetan:05XXXXXXXXXXXfR@cluster0.wxcxg.mongodb.net/\")\n",
+    "    client = MongoClient(\"mongodb+srv://gaetan:05XXXXXXfR@cluster0.wxcxg.mongodb.net/\")\n",
     "    db = client['youtube_data']\n",
     "    collection = db['videos']\n",
     "\n",
