rename file youtube_api_to_mongodb

--- a/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB.ipynb
+++ b/master2/BIGDATA/youtube_api_to_mongodb/YoutubeAPI to MongoDB.ipynb
@@ -22,7 +22,7 @@
     "from pymongo import MongoClient\n",
     "import json\n",
     "\n",
-    "API_KEY = 'AIzaSyBEhK6byJFG39I1PBxfkDZemTcWnsEdMe4'\n",
+    "API_KEY = 'XXXXXXXXXXXXXXXXXXXX'\n",
     "\n",
     "def save_next_page_token(token, filename='next_page_token.json'):\n",
     "    with open(filename, 'w') as file:\n",
@@ -396,7 +396,7 @@
     "    \"\"\"\n",
     "    Lit les données depuis le fichier CSV généré et les insère dans une base de données MongoDB locale.\n",
     "    \"\"\"\n",
-    "    client = MongoClient(\"mongodb+srv://gaetan:05021995fR@cluster0.wxcxg.mongodb.net/\")\n",
+    "    client = MongoClient(\"mongodb+srv://gaetan:05XXXXXXfR@cluster0.wxcxg.mongodb.net/\")\n",
     "    db = client['youtube_data']\n",
     "    collection = db['videos3']\n",
     "\n",
