add distributed architecture opendata_to_etl_to_api

--- a/master2/ARCHITECTURE_DISTRIBUE/tp5_opendata_to_etl_to_api/extract_TABLE_SPECTACLE_on_pdf.ipynb
+++ b/master2/ARCHITECTURE_DISTRIBUE/tp5_opendata_to_etl_to_api/extract_TABLE_SPECTACLE_on_pdf.ipynb
@@ -68,8 +68,12 @@
     "    \n",
     "    # Extraction de tous les tableaux de la page\n",
     "    tables = page.extract_tables()\n",
+    "    df = pd.DataFrame(table[1:], columns=table[0])\n",
+    "    df = df.applymap(lambda x: x.replace('\\n', '') if isinstance(x, str) else x)\n",
+    "    df.to_csv(\"page_50_pdf_plumber.csv\", index=False, encoding=\"utf-8\")\n",
+    "    print(df.head(5))\n",
     "    \n",
-    "    table = tables[0]\n",
+    "        table = tables[0]\n",
     "    print(\"table[0]\", table[0])\n",
     "    print('')\n",
     "    print(\"table[1]\", table[1])\n",
@@ -86,7 +90,8 @@
     "    df = pd.DataFrame(table[1:], columns=table[0])\n",
     "    df = df.applymap(lambda x: x.replace('\\n', '') if isinstance(x, str) else x)\n",
     "    df.to_csv(\"page_50_pdf_plumber.csv\", index=False, encoding=\"utf-8\")\n",
-    "    print(df.head(5))\n"
+    "    print(df.head(5))\n",
+    "\n"
    ]
   },
   {
