--- a/master2/ARCHITECTURE_DISTRIBUE/tp5_opendata_to_etl_to_api/get_LIEU_by_website.ipynb
+++ b/master2/ARCHITECTURE_DISTRIBUE/tp5_opendata_to_etl_to_api/get_LIEU_by_website.ipynb
@@ -185,6 +185,39 @@
     "import html\n",
     "import json\n",
     "\n",
+    "url_lieu = \"https://festival-avignon.com/fr/edition-2025/programmation/par-lieu\"\n",
+    "response = requests.get(url_lieu)\n",
+    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "tag_places = soup.find(\"program-by-place\")\n",
+    "raw_places = tag_places.get(\":places\")\n",
+    "decoded_places = html.unescape(raw_places)\n",
+    "places = json.loads(decoded_places)\n",
+    "\n",
+    "data = []\n",
+    "for place in places:\n",
+    "    print({\n",
+    "        \"id\": place[\"id\"],\n",
+    "        \"title\": place[\"title\"],\n",
+    "        \"slug\": place[\"titleSlug\"],\n",
+    "        \"address\": place[\"location\"][\"address\"],\n",
+    "        \"latitude\": place[\"location\"][\"latitude\"],\n",
+    "        \"longitude\": place[\"location\"][\"longitude\"],\n",
+    "    })\n",
+    "    data.append({\n",
+    "        \"id\": place[\"id\"],\n",
+    "        \"title\": place[\"title\"],\n",
+    "        \"slug\": place[\"titleSlug\"],\n",
+    "        \"address\": place[\"location\"][\"address\"],\n",
+    "        \"latitude\": place[\"location\"][\"latitude\"],\n",
+    "        \"longitude\": place[\"location\"][\"longitude\"],\n",
+    "    })\n",
+    "\n",
+    "df_places = pd.DataFrame(data)\n",
+    "print(df_places)\n",
+    "df_places.to_csv(\"lieu_lat_long.csv\", index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# url = \"https://festival-avignon.com/fr/edition-2025/programmation/par-categorie?cat=1001\"\n",
     "\n",
@@ -224,37 +257,7 @@
     "#     print(f\"   Description: {ev['description'][:200]}...\")  # tronqué\n",
     "#     print(\"—\" * 50)\n",
     "\n",
-    "#############\" PLACES\"\n",
-    "url_lieu = \"https://festival-avignon.com/fr/edition-2025/programmation/par-lieu\"\n",
-    "response = requests.get(url_lieu)\n",
-    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "tag_places = soup.find(\"program-by-place\")\n",
-    "raw_places = tag_places.get(\":places\")\n",
-    "decoded_places = html.unescape(raw_places)\n",
-    "places = json.loads(decoded_places)\n",
-    "\n",
-    "data = []\n",
-    "for place in places:\n",
-    "    print({\n",
-    "        \"id\": place[\"id\"],\n",
-    "        \"title\": place[\"title\"],\n",
-    "        \"slug\": place[\"titleSlug\"],\n",
-    "        \"address\": place[\"location\"][\"address\"],\n",
-    "        \"latitude\": place[\"location\"][\"latitude\"],\n",
-    "        \"longitude\": place[\"location\"][\"longitude\"],\n",
-    "    })\n",
-    "    data.append({\n",
-    "        \"id\": place[\"id\"],\n",
-    "        \"title\": place[\"title\"],\n",
-    "        \"slug\": place[\"titleSlug\"],\n",
-    "        \"address\": place[\"location\"][\"address\"],\n",
-    "        \"latitude\": place[\"location\"][\"latitude\"],\n",
-    "        \"longitude\": place[\"location\"][\"longitude\"],\n",
-    "    })\n",
-    "\n",
-    "df_places = pd.DataFrame(data)\n",
-    "print(df_places)\n",
-    "df_places.to_csv(\"lieu_lat_long.csv\", index=False, encoding=\"utf-8\")"
+    "#############\" PLACES\""
    ]
   },
   {
