add presentation for tp5 distributed architecture

--- a/master2/ARCHITECTURE_DISTRIBUE/tp5_opendata_to_etl_to_api/get_LIEU_by_website.ipynb
+++ b/master2/ARCHITECTURE_DISTRIBUE/tp5_opendata_to_etl_to_api/get_LIEU_by_website.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c758f120",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔹 When I Saw the Sea\n",
-      "   Sous-titre : Quand j'ai vu la Mer – عندما رأيت البحر\n",
-      "   Résumé     : Par le chant et par la danse, trois femmes entrent en résistance contre un système qui, au Liban, soumet les travailleuses migrantes à une forme d’esclavagisme moderne.\n",
-      "   Description: Sur scène, trois femmes. Elles sont éthiopiennes et libanaises. Dans un Liban en proie aux bombes, elles tentent d’échapper au système Kafala qui soumet les travailleuses migrantes à une forme d’escla...\n",
-      "——————————————————————————————————————————————————\n",
-      "🔹 Le Canard sauvage\n",
-      "   Sous-titre : \n",
-      "   Résumé     : Dans Un ennemi du peuple d'Henrik Ibsen (2012), Thomas Ostermeier explorait la nécessité de défendre la vérité dans une société guidée par les intérêts économiques. Le Canard Sauvage montre quant à lui à quel point une vérité absolue peut être destructrice.\n",
-      "   Description: Toute vérité n’est pas bonne à dire chez les Ekdal. Du père qui se prend pour un inventeur de génie à l’aïeul qui vit dans ses souvenirs, la vie est un mensonge dans cette famille en apparence sans hi...\n",
-      "——————————————————————————————————————————————————\n",
-      "🔹 Fusées\n",
-      "   Sous-titre : \n",
-      "   Résumé     : Fusées entreprend de conter aux enfants comme aux adultes l’épopée de l’exploration spatiale, en la magnifiant avec les outils artisanaux du théâtre.\n",
-      "   Description: C’est l’histoire de deux hommes, deux grands garçons abandonnés dans le cosmos. Coincés dans une station spatiale, Boris et Kyril ignorent quand ils pourront rentrer chez eux. L’un pleure et sombre da...\n",
-      "——————————————————————————————————————————————————\n",
       "{'id': 1167, 'title': \"Cour d'honneur du palais des Papes\", 'slug': 'cour-d-honneur-du-palais-des-papes', 'address': 'Place du Palais 84000 Avignon', 'latitude': 43.950612, 'longitude': 4.807351}\n",
       "{'id': 1169, 'title': \"La FabricA du Festival d'Avignon\", 'slug': 'la-fabrica-du-festival-d-avignon', 'address': '11 rue Paul Achard 84000 Avignon', 'latitude': 43.934772, 'longitude': 4.797077}\n",
       "{'id': 36636, 'title': 'Opéra Grand Avignon', 'slug': 'opera-grand-avignon', 'address': \"place de l'Horloge 84000 Avignon\", 'latitude': 43.94974, 'longitude': 4.80573}\n",
@@ -54,6 +39,7 @@
       "{'id': 1251, 'title': 'Cour du château de Saze', 'slug': 'cour-du-chateau-de-saze', 'address': '4 Place de la Fontaine 30650 Saze', 'latitude': 43.941111, 'longitude': 4.681667}\n",
       "{'id': 351887, 'title': 'Bibliothèque du Puzzle', 'slug': 'bibliotheque-du-puzzle', 'address': '4, rue Pierre-Auguste Renoir', 'latitude': 43.948341, 'longitude': 4.85181}\n",
       "{'id': 351885, 'title': 'Bibliothèque Renaud Barrault', 'slug': 'bibliotheque-renaud-barrault', 'address': '6 Rue Perrin Morel, 84000 Avignon, France', 'latitude': 43.929993, 'longitude': 4.822993}\n",
+      "{'id': 36776, 'title': 'Cour Cémea du lycée Saint-Joseph', 'slug': 'cour-cemea-du-lycee-saint-joseph', 'address': None, 'latitude': 0, 'longitude': 0}\n",
       "{'id': 36791, 'title': 'Festival Villeneuve en Scène', 'slug': 'festival-villeneuve-en-scene', 'address': \"Plaine de l'Abbaye, 30400 Villeneuve-lès-Avignon\", 'latitude': 43.96445, 'longitude': 4.802611}\n",
       "{'id': 348672, 'title': 'Forum des Angles, salle Blanchard', 'slug': 'forum-des-angles-salle-blanchard', 'address': '10 Bd des Carrières, 30133 Les Angles', 'latitude': 43.960157, 'longitude': 4.767635}\n",
       "{'id': 1193, 'title': \"Les Hivernales – CDCN d'Avignon\", 'slug': 'les-hivernales-–-cdcn-d-avignon', 'address': '18 rue Guillaume Puy 84000 Avignon', 'latitude': 43.9496, 'longitude': 4.8142700000000005}\n",
@@ -91,13 +77,14 @@
       "26    1251                            Cour du château de Saze   \n",
       "27  351887                             Bibliothèque du Puzzle   \n",
       "28  351885                       Bibliothèque Renaud Barrault   \n",
-      "29   36791                       Festival Villeneuve en Scène   \n",
-      "30  348672                  Forum des Angles, salle Blanchard   \n",
-      "31    1193                    Les Hivernales – CDCN d'Avignon   \n",
-      "32   36782                                Médiathèque Ceccano   \n",
-      "33  351166          Salle des colloques – Cloître Saint-Louis   \n",
-      "34  348671                        Salle polyvalente de Pujaut   \n",
-      "35  352026                Villa Créative – Avignon Université   \n",
+      "29   36776                   Cour Cémea du lycée Saint-Joseph   \n",
+      "30   36791                       Festival Villeneuve en Scène   \n",
+      "31  348672                  Forum des Angles, salle Blanchard   \n",
+      "32    1193                    Les Hivernales – CDCN d'Avignon   \n",
+      "33   36782                                Médiathèque Ceccano   \n",
+      "34  351166          Salle des colloques – Cloître Saint-Louis   \n",
+      "35  348671                        Salle polyvalente de Pujaut   \n",
+      "36  352026                Villa Créative – Avignon Université   \n",
       "\n",
       "                                                 slug  \\\n",
       "0                  cour-d-honneur-du-palais-des-papes   \n",
@@ -129,13 +116,14 @@
       "26                            cour-du-chateau-de-saze   \n",
       "27                             bibliotheque-du-puzzle   \n",
       "28                       bibliotheque-renaud-barrault   \n",
-      "29                       festival-villeneuve-en-scene   \n",
-      "30                   forum-des-angles-salle-blanchard   \n",
-      "31                    les-hivernales-–-cdcn-d-avignon   \n",
-      "32                                mediatheque-ceccano   \n",
-      "33          salle-des-colloques-–-cloitre-saint-louis   \n",
-      "34                        salle-polyvalente-de-pujaut   \n",
-      "35                villa-creative-–-avignon-universite   \n",
+      "29                   cour-cemea-du-lycee-saint-joseph   \n",
+      "30                       festival-villeneuve-en-scene   \n",
+      "31                   forum-des-angles-salle-blanchard   \n",
+      "32                    les-hivernales-–-cdcn-d-avignon   \n",
+      "33                                mediatheque-ceccano   \n",
+      "34          salle-des-colloques-–-cloitre-saint-louis   \n",
+      "35                        salle-polyvalente-de-pujaut   \n",
+      "36                villa-creative-–-avignon-universite   \n",
       "\n",
       "                                              address   latitude  longitude  \n",
       "0                       Place du Palais 84000 Avignon  43.950612   4.807351  \n",
@@ -167,13 +155,14 @@
       "26                  4 Place de la Fontaine 30650 Saze  43.941111   4.681667  \n",
       "27                       4, rue Pierre-Auguste Renoir  43.948341   4.851810  \n",
       "28          6 Rue Perrin Morel, 84000 Avignon, France  43.929993   4.822993  \n",
-      "29   Plaine de l'Abbaye, 30400 Villeneuve-lès-Avignon  43.964450   4.802611  \n",
-      "30              10 Bd des Carrières, 30133 Les Angles  43.960157   4.767635  \n",
-      "31                 18 rue Guillaume Puy 84000 Avignon  43.949600   4.814270  \n",
-      "32                     2 bis, rue Laboureur - Avignon  43.946003   4.806870  \n",
-      "33            20 rue du portail Boquier 84000 Avignon  43.943603   4.804582  \n",
-      "34                    1 Place du Marché, 30131 Pujaut  44.002895   4.774796  \n",
-      "35            33 bis Rue Louis Pasteur, 84000 Avignon  43.949848   4.816221  \n"
+      "29                                               None   0.000000   0.000000  \n",
+      "30   Plaine de l'Abbaye, 30400 Villeneuve-lès-Avignon  43.964450   4.802611  \n",
+      "31              10 Bd des Carrières, 30133 Les Angles  43.960157   4.767635  \n",
+      "32                 18 rue Guillaume Puy 84000 Avignon  43.949600   4.814270  \n",
+      "33                     2 bis, rue Laboureur - Avignon  43.946003   4.806870  \n",
+      "34            20 rue du portail Boquier 84000 Avignon  43.943603   4.804582  \n",
+      "35                    1 Place du Marché, 30131 Pujaut  44.002895   4.774796  \n",
+      "36            33 bis Rue Louis Pasteur, 84000 Avignon  43.949848   4.816221  \n"
      ]
     }
    ],
@@ -264,6 +253,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b6a8790c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ba54237",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db264ca",
    "metadata": {},
    "outputs": [],
    "source": []
